test(selfrun3): use Android-compatible file read helper